# greenchempanion

./: .copier-answers.yml  LICENSE  README.md  env_win.yml  pyproject.toml
data/: solvent_data.csv
docs/source/: conf.py
notebooks/: draft_report.ipynb  mini_documentation.md  report.ipynb
src/: env.yml  env.ymlTAB  env_mac.yml  env_win.yml
src/greenchempanion/: __init__.py  app.py  app_utilities.py  assessments.py  functions.py  test_functions.py  tests.py
tests/: test_example_module.py  test_functions.py
