[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "greenchempanion"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
description = "Your interactive companion for Green Chemistry"
dependencies = [
    "rdkit",
    "streamlit",
    "streamlit-ketcher",
    "pandas"
    "ipykernel"
]
authors = [
    {name = "Ralph GEBRAN", email = "ralphgebran41@gmail.com"},
    {name = "Marc AL HACHEM", email = "marc.alhachem@epfl.ch"},
    {name = "Tais Thomas", email = "tais.thomas@epfl.ch"},
    {name = "Valentine WIEN", email = "valentine.wien@epfl.ch"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/ralphgebran/greenchempanion"
tracker = "https://github.com/ralphgebran/greenchempanion/issues"

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "tox",
    "genbadge[coverage]",
]
doc = [
    "furo",
    "myst-parser",
    "sphinx>=5",
    "sphinx-copybutton",
]

[tool.hatch.version]
path = "src/greenchempanion/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/greenchempanion"]  

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests",]

[tool.coverage.run]
omit = [
    '__init__.py'
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]

